[gd_scene load_steps=25 format=3 uid="uid://b5rm3wg635n0d"]

[ext_resource type="Material" path="res://proto_grid_walls_outside.tres" id="1_1mcve"]
[ext_resource type="Material" uid="uid://buyqrk1flr7ur" path="res://proto_grid_dark.tres" id="1_dstxg"]
[ext_resource type="Material" path="res://proto_grid_sidewalk.tres" id="2_rma4y"]
[ext_resource type="Material" path="res://proto_grid_roof.tres" id="3_00jhg"]
[ext_resource type="PackedScene" uid="uid://b1n6sga2k8u25" path="res://door.tscn" id="3_okna4"]
[ext_resource type="Script" path="res://scripts/door_controller.gd" id="4_v1375"]
[ext_resource type="Script" path="res://scripts/camera_rig.gd" id="5_ppc8n"]
[ext_resource type="Material" uid="uid://1ec0jn11dy88" path="res://addons/trailmesh/example/ExampleScene.tres" id="7_2p733"]
[ext_resource type="Script" path="res://scripts/spawner.gd" id="7_pwtdn"]
[ext_resource type="Resource" uid="uid://cika77140oqkm" path="res://data/customers/customer_fish.tres" id="8_0ryin"]
[ext_resource type="Script" path="res://scripts/goal.gd" id="8_bs7q7"]
[ext_resource type="Script" path="res://customer_data.gd" id="8_rw7ko"]
[ext_resource type="Resource" uid="uid://bffku16fgf4nh" path="res://data/customers/customer_orc.tres" id="12_b6g7w"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7qccb"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2ojho"]
sky_material = SubResource("ProceduralSkyMaterial_7qccb")

[sub_resource type="Environment" id="Environment_mgxy8"]
background_mode = 2
sky = SubResource("Sky_2ojho")
ambient_light_source = 3
ambient_light_color = Color(0.3525, 0.432, 0.75, 1)
reflected_light_source = 2
tonemap_mode = 3
ssao_enabled = true
sdfgi_enabled = true
sdfgi_use_occlusion = true
glow_enabled = true
glow_normalized = true
fog_enabled = true
fog_light_color = Color(0.2318, 0.376777, 0.61, 1)
fog_sun_scatter = 0.12
fog_aerial_perspective = 0.4
fog_height_density = 2.8444

[sub_resource type="CameraAttributesPhysical" id="CameraAttributesPhysical_8v5cu"]

[sub_resource type="NavigationMesh" id="NavigationMesh_368nx"]
vertices = PackedVector3Array(9.25, 2.85, -9.75, 9.75, 2.85, -2.75, 9.75, 2.85, -9.75, -4.25, 0.35, -1, -4, 0.35, -9.25, -9.25, 0.35, -9.25, -9.25, 0.35, -1, -0.75, 0.35, -0.5, -0.5, 0.35, 0.75, 0.5, 0.35, 1, 1, 0.35, -0.5, 4.5, 0.35, -1, 4.25, 0.35, -9.25, 9, 0.35, -1, 9, 0.35, -9.25, -9.75, 5.35, -2.25, -9.75, 4.6, 0, 9.75, 4.6, 0, 9.75, 5.35, -2.25, 9.75, 2.85, -0.25, 9.75, 2.85, -2, 9.25, 2.85, -0.5, -9.5, 2.85, -0.5, -1.5, 0.35, 1.5, -1.5, 0.35, 0.5, -3, 0.35, 0.25, -10, 0.35, 2.25, -18.25, 0.35, 27.25, -1.75, 0.35, 27.25, -9.75, 0.35, 0.25, -18.25, 0.35, 2.25, 9.75, 0.35, 0.25, 1.5, 0.35, 0.5, 1.5, 0.35, 1.5, 10, 0.35, 2.25, 1.75, 0.35, 27.25, 16.25, 0.35, 27.25, 16.25, 0.35, 2.25, 0.75, 0.35, 2, -0.75, 0.35, 2)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(6, 5, 3), PackedInt32Array(3, 5, 4), PackedInt32Array(8, 7, 9), PackedInt32Array(9, 7, 10), PackedInt32Array(7, 3, 10), PackedInt32Array(10, 3, 11), PackedInt32Array(11, 3, 4), PackedInt32Array(11, 4, 12), PackedInt32Array(13, 11, 14), PackedInt32Array(14, 11, 12), PackedInt32Array(18, 17, 15), PackedInt32Array(15, 17, 16), PackedInt32Array(21, 20, 19), PackedInt32Array(21, 19, 22), PackedInt32Array(24, 23, 25), PackedInt32Array(25, 23, 26), PackedInt32Array(26, 23, 28), PackedInt32Array(26, 28, 27), PackedInt32Array(26, 29, 25), PackedInt32Array(27, 30, 26), PackedInt32Array(32, 31, 33), PackedInt32Array(33, 31, 34), PackedInt32Array(33, 34, 35), PackedInt32Array(35, 34, 36), PackedInt32Array(34, 37, 36), PackedInt32Array(9, 38, 8), PackedInt32Array(8, 38, 39), PackedInt32Array(39, 38, 35), PackedInt32Array(39, 35, 28), PackedInt32Array(28, 23, 39), PackedInt32Array(38, 33, 35)]
geometry_parsed_geometry_type = 2
agent_height = 1.0
agent_radius = 0.25

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7q4xu"]
friction = 0.83
bounce = 0.25

[sub_resource type="Curve" id="Curve_qcvud"]
_data = [Vector2(0, 0.533263), 0.0, -3.81425, 0, 0, Vector2(0.307584, 0.126927), -0.350863, -0.350863, 0, 0, Vector2(0.98736, 0.0116156), -0.312769, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_jh4q2"]
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="Curve3D" id="Curve3D_mo0t6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_86is4"]
size = Vector3(15.5, 0.5, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_hx5tm"]
size = Vector3(15.5, 2, 4.5)

[node name="Node3D" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mgxy8")
camera_attributes = SubResource("CameraAttributesPhysical_8v5cu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.93358, 0.266737, -0.23933, 0, 0.667833, 0.744312, 0.358368, -0.694875, 0.623475, 0, 0, 0)
shadow_enabled = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
navigation_mesh = SubResource("NavigationMesh_368nx")
use_edge_connections = false

[node name="door_right" parent="NavigationRegion3D" instance=ExtResource("3_okna4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
sleeping = true
lock_rotation = true
freeze = true

[node name="door_right2" parent="NavigationRegion3D" instance=ExtResource("3_okna4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0)
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
sleeping = true
lock_rotation = true
freeze = true

[node name="door_left" parent="NavigationRegion3D" instance=ExtResource("3_okna4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
sleeping = true
lock_rotation = true
freeze = true

[node name="door_open_pathing" parent="NavigationRegion3D" instance=ExtResource("3_okna4")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1, 0, 1)
visible = false
collision_layer = 0
collision_mask = 0
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
sleeping = true
lock_rotation = true
freeze = true

[node name="door_open_pathing2" parent="NavigationRegion3D" instance=ExtResource("3_okna4")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1, 0, 1)
visible = false
collision_layer = 0
collision_mask = 0
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
sleeping = true
lock_rotation = true
freeze = true

[node name="door_left2" parent="NavigationRegion3D" instance=ExtResource("3_okna4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
sleeping = true
lock_rotation = true
freeze = true

[node name="CSGBox3D2" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125, 1.23602, -5.025)
use_collision = true
size = Vector3(19.75, 2.47205, 9.85)
material = ExtResource("1_1mcve")

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D/CSGBox3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.145, -0.368699, 5)
operation = 2
size = Vector3(6, 1.8, 1)

[node name="CSGBox3D2" type="CSGBox3D" parent="NavigationRegion3D/CSGBox3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.104724, 0)
operation = 2
size = Vector3(19, 3, 9)

[node name="CSGBox3D3" type="CSGBox3D" parent="NavigationRegion3D/CSGBox3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.125, -1.68602, 1.025)
use_collision = true
size = Vector3(20, 0.9, 12)
material = ExtResource("2_rma4y")

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.45, 14.75)
use_collision = true
size = Vector3(35, 0.9, 25.5)
material = ExtResource("1_dstxg")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="NavigationRegion3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -10, 2.5, 0)
polygon = PackedVector2Array(-2.5, 0, -2.5, 2.5, 0, 1.5, 1, 0)
depth = 20.0
material = ExtResource("3_00jhg")

[node name="Doors" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)

[node name="door_left_mover" parent="Doors" node_paths=PackedStringArray("close_pin") instance=ExtResource("3_okna4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0.1)
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_7q4xu")
can_sleep = false
linear_damp = 4.663
script = ExtResource("4_v1375")
input_open = &"door_left_open"
input_close = &"door_left_close"
force = 100.0
swing = true
close_pin = NodePath("../joints/door_left_pin")

[node name="TrailEmitter" type="TrailEmitter" parent="Doors/door_left_mover"]
material = ExtResource("7_2p733")
curve = SubResource("Curve_qcvud")
gradient = SubResource("Gradient_jh4q2")
geometry_nodepath = NodePath("Path3D")
num_points = 10
update_interval = 0.05
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.446331, 1.7191, 0)

[node name="Path3D" type="Path3D" parent="Doors/door_left_mover/TrailEmitter"]
curve = SubResource("Curve3D_mo0t6")

[node name="door_right_mover" parent="Doors" node_paths=PackedStringArray("close_pin") instance=ExtResource("3_okna4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.1)
collision_mask = 0
can_sleep = false
linear_damp = 4.663
script = ExtResource("4_v1375")
input_open = &"door_right_open"
input_close = &"door_right_close"
force = -100.0
swing = true
close_pin = NodePath("../joints/door_right_pin")

[node name="joints" type="Node3D" parent="Doors"]

[node name="door_left_joint" type="HingeJoint3D" parent="Doors/joints"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.95, 0, 0.1)
node_b = NodePath("../../door_left_mover")
angular_limit/enable = true

[node name="door_left_joint_upper" type="HingeJoint3D" parent="Doors/joints"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.95, 1.75, 0.1)
node_b = NodePath("../../door_left_mover")
angular_limit/enable = true

[node name="door_right_joint" type="HingeJoint3D" parent="Doors/joints"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1, 0, 0.1)
node_b = NodePath("../../door_right_mover")
angular_limit/enable = true

[node name="door_right_joint_upper" type="HingeJoint3D" parent="Doors/joints"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1, 1.75, 0.1)
node_b = NodePath("../../door_right_mover")
angular_limit/enable = true

[node name="PinJoint3D" type="PinJoint3D" parent="Doors/joints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)
node_b = NodePath("../../../NavigationRegion3D/door_left")

[node name="PinJoint3D2" type="PinJoint3D" parent="Doors/joints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1.75, 0)
node_b = NodePath("../../../NavigationRegion3D/door_left")

[node name="door_left_pin" type="PinJoint3D" parent="Doors/joints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
node_b = NodePath("../../door_left_mover")
params/bias = 0.03
params/impulse_clamp = 1.0

[node name="door_right_pin" type="PinJoint3D" parent="Doors/joints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
node_b = NodePath("../../door_right_mover")
params/bias = 0.03
params/impulse_clamp = 1.0

[node name="CameraRig" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.261, 3.5, 8.2321)
script = ExtResource("5_ppc8n")
look_sensitivity = 0.1
follow_sensitivity = 10.0

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1, 0)
collision_mask = 0
spring_length = 0.0

[node name="Camera3D" type="Camera3D" parent="CameraRig/SpringArm3D"]
fov = 47.4

[node name="Spawner" type="Area3D" parent="." groups=["spawner"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 9)
script = ExtResource("7_pwtdn")
customers = Array[ExtResource("8_rw7ko")]([ExtResource("8_0ryin"), ExtResource("12_b6g7w")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="Spawner"]
shape = SubResource("BoxShape3D_86is4")
disabled = true

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 0.001
autostart = true

[node name="Goal" type="Area3D" parent="." groups=["goal"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -4.5)
collision_mask = 4
script = ExtResource("8_bs7q7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Goal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_hx5tm")

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="area_entered" from="Goal" to="Goal" method="_on_area_entered"]
[connection signal="area_shape_entered" from="Goal" to="Goal" method="_on_area_shape_entered"]
[connection signal="body_entered" from="Goal" to="Goal" method="_on_body_entered"]
